--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -8,8 +8,14 @@ spring.datasource.password=Naitsabes1!
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+# Logging properties
+logging.level.org.springframework.web=ERROR
+logging.level.com.example=DEBUG
+
+# Logging pattern for the console
+logging.pattern.console= "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
 
 
 ## Jackson Properties
